added backend, users and other logic
