# models/user.go
@@ -1,0 +1,18 @@
+// models/user.go
+package models
+
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
+type User struct {
+	ID        uint           `json:"id" gorm:"primaryKey"`
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `json:"-" gorm:"index"`
+	Name      string         `json:"name" binding:"required"`
+	Email     string         `json:"email" binding:"required,email" gorm:"unique"`
+	Password  string         `json:"-" binding:"required"`
+}
